# SLAMBot_23FallAR

./: README.md  frames_2024-02-13_23.39.47.gv  frames_2024-02-13_23.45.49.gv
install/: local_setup.sh  setup.sh
install/ar_loc_base/share/ar_loc_base/: ar_loc_only.launch.py  package.sh
install/ar_mapping_base/share/ar_mapping_base/: package.sh
install/ar_slam_base/share/ar_slam_base/: package.sh
install/button_server/share/button_server/: package.sh
install/collision_avoidance_base/share/collision_avoidance_base/: package.sh
install/face_detect_base/share/face_detect_base/: package.sh
install/floor_graph/lib/floor_graph/: build_graph_node  build_graph_test_node  graph_viz_node
install/floor_graph/share/floor_graph/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/floor_nav/lib/floor_nav/: graph_forever.py  test_wander.py  test_wanderfront.py
install/floor_nav/share/floor_nav/: launch_rover.launch  launch_rover.launch.py  local_setup.sh  package.sh
install/hw1/share/hw1/: package.sh
install/hw1_xwh/lib/hw1_xwh/: my_node
install/hw1_xwh/share/hw1_xwh/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/keyboard_teleop/share/keyboard_teleop/: package.sh
install/msg_pkg/share/msg_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rover_driver_base/share/rover_driver_base/: package.sh
install/task_manager_client_py/share/task_manager_client_py/: package.sh
install/task_manager_lib/share/task_manager_lib/: local_setup.sh  package.sh
install/task_manager_msgs/lib/task_manager_msgs/: task_manager_msgs_encapsulate
install/task_manager_msgs/share/task_manager_msgs/: local_setup.sh  package.sh
install/task_manager_nav2/share/task_manager_nav2/: local_setup.sh  package.sh
install/task_manager_sync/share/task_manager_sync/: local_setup.sh  package.sh
install/vrep4_helpers/lib/vrep4_helpers/: image_flip
log/: latest_build
src/ar_loc_base/ar_loc_base/: rover_odo.py
src/ar_slam_base/ar_slam_base/: mapping_kf.py
src/ar_slam_base/launch/: tb_slam.launch.py  tb_slam_only.launch.py
src/collision_avoidance_base/: CMakeLists.txt
src/collision_avoidance_base/src/: collision_avoidance.cpp
src/face_detect_base/launch/: face_detect.launch.py
src/floor_nav/: CMakeLists.txt
src/floor_nav/missions/: test_gotopose.py  test_task2.py
src/floor_nav/tasks/: TaskAutoDock.h  TaskGoToPose.cpp  TaskGoToPose.h  TaskStareAtFace.cpp  TaskStareAtFace.h  TaskWaitForFace.cpp  TaskWaitForFace.h  TaskWander.cpp  TaskWanderfront.cpp  TaskWanderfront.h
src/hw1/: README.md  setup.py
src/hw1_xwh/: CMakeLists.txt
src/hw1_xwh/src/: joystick.cpp  my_node.cpp
src/install/: local_setup.sh  setup.sh
src/install/hw1/share/hw1/: package.dsv  package.ps1  package.sh  package.xml
src/log/: latest_build
src/msg_pkg/: CMakeLists.txt
src/msg_pkg/msg/: RegionsOfInterestArray.msg
src/rover_driver_base/: package.xml
src/rover_driver_base/rover_driver_base/: rover_kinematics.py  rover_odom.py
(+59 files in other folders)
